[package]
name = "smik-psk-gen"
description = "Generate pre-shared keys for the smik gateways"
categories = ["command-line-utilities"]
keywords = ["PSK", "key", "smik"]
authors = ["Richard Neumann <neumann@paulmann.de>"]
repository = "https://github.com/PaulmannLighting/smik-psk-gen"
license = "MIT"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
clap = { version = "4.4", features = ["derive"] }
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
clap-stdin = "0.5"
